--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "styled-components": "^6.0.7",
     "swiper": "^10.3.1",
     "uuid": "^9.0.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
